# pickaxe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
config/: ops.toml  server.toml
crates/pickaxe-data/: Cargo.toml  build.rs
crates/pickaxe-data/src/: lib.rs
crates/pickaxe-events/: Cargo.toml
crates/pickaxe-events/src/: bus.rs
crates/pickaxe-nbt/: Cargo.toml
crates/pickaxe-nbt/src/: nbt.rs
crates/pickaxe-protocol-core/: Cargo.toml
crates/pickaxe-protocol-core/src/: adapter.rs  codec.rs  connection.rs  lib.rs  packets.rs  state.rs
crates/pickaxe-protocol-v1_21/: Cargo.toml
crates/pickaxe-protocol-v1_21/src/: adapter.rs  lib.rs  registries.rs
crates/pickaxe-region/: Cargo.toml
crates/pickaxe-region/src/: lib.rs  region_file.rs
crates/pickaxe-scripting/: Cargo.toml
crates/pickaxe-scripting/src/: bridge.rs  lib.rs  mod_loader.rs  runtime.rs  sandbox.rs
crates/pickaxe-server/: Cargo.toml
crates/pickaxe-server/src/: bridge.rs  config.rs  ecs.rs  main.rs  network.rs  player.rs  state.rs  tick.rs
crates/pickaxe-types/: Cargo.toml
crates/pickaxe-types/src/: types.rs
crates/pickaxe-world/: Cargo.toml
crates/pickaxe-world/src/: chunk.rs  generator.rs  lib.rs
data/minecraft/blocks/: copper.json  coral.json  decoration.json  dirt.json  glass.json  misc.json  nether.json  ores.json  plants.json  redstone.json  stone.json  wood.json
data/minecraft/items/: armor.json  blocks.json  combat.json  dyes.json  food.json  materials.json  misc.json  music_discs.json  potions.json  spawn_eggs.json  tools.json
docs/plans/: 2026-02-17-container-blocks-design.md  2026-02-17-container-blocks.md  2026-02-17-world-persistence-design.md  2026-02-17-world-persistence.md  architecture.md
lua/core/: init.lua  pickaxe.toml
lua/vanilla/: blocks.lua  commands.lua  containers.lua  entities.lua  init.lua  pickaxe.toml  player.lua  world.lua
