[package]
name = "pickaxe-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "pickaxe"
path = "src/main.rs"

[dependencies]
pickaxe-types = { workspace = true }
pickaxe-nbt = { workspace = true }
pickaxe-data = { workspace = true }
pickaxe-protocol-core = { workspace = true }
pickaxe-protocol-v1_21 = { workspace = true }
pickaxe-world = { workspace = true }
pickaxe-events = { workspace = true }
pickaxe-scripting = { workspace = true }
mlua = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
hecs = { workspace = true }
